# course_5_db

./: main.py  pyproject.toml
src/: README.md  api_hh.py  dbmanager.py  utils.py
